# apache-airflow-microsoft-fabric-plugin

./: .gitignore  README.md  pyproject.toml
src/apache_airflow_microsoft_fabric_plugin/hooks/: fabric.py
src/apache_airflow_microsoft_fabric_plugin/operators/: fabric.py
src/apache_airflow_microsoft_fabric_plugin/triggers/: fabric.py
tests/: conftest.py
tests/hooks/: fabric.py  test_fabric.py
tests/operators/: test_fabric.py
tests/triggers/: test_fabric.py
